Adicionados Bootstrap, Material Designer, jQuery, Font Awesome, jQuery-ui

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE>
+<html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
-  <title>Barcelona</title>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+
+  <title>Barcelona Café</title>
+
+
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 </head>
+
 <body>
-  <app-root></app-root>
+
+<app-root></app-root>
+
+
 </body>
 </html>
