--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
   <title>Barcelona Café</title>
 
 
-  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/img/app/favicon.ico" type="image/x-icon">
 
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
