--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,14 @@
 </head>
 
 <body>
+<!-- loader -->
+<div class="loader-container" >
+  <div class="spinner">
+    <div class="bounce1"></div>
+    <div class="bounce2"></div>
+    <div class="bounce3"></div>
+  </div>
+</div>
 
 <app-root></app-root>
 
